syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.requests";
option java_multiple_files = true;

package request_models;

// requests
import "requests/player-credentials.proto";


message ProtectionWallsRequest {
  int32 towerId = 1;
  request_models.PlayerCredentials playerCredentials = 2;
};
